--- a/package.json
+++ b/package.json
@@ -15,13 +15,15 @@
   "dependencies": {
     "@types/supertest": "^2.0.10",
     "express": "^4.17.1",
+    "express-async-errors": "^3.1.1",
     "handlebars": "^4.7.7",
     "nodemailer": "^6.4.18",
     "reflect-metadata": "^0.1.13",
     "sqlite3": "^5.0.2",
     "supertest": "^6.1.3",
     "typeorm": "^0.2.31",
-    "uuid": "^3.4.0"
+    "uuid": "^3.4.0",
+    "yup": "^0.32.9"
   },
   "devDependencies": {
     "@types/express": "^4.17.11",
